# ESP32

ESP32-C3/_temp/ec_download/: cfg.digest  config_ec618_uart.ini  config_ec618_usb.ini
ESP32-C3/config/: global.ini  self.json
ESP32-C3/log/: main_20230501.txt
ESP32-S2/s2_dht11/: CMakeLists.txt
ESP32-S2/s2_dht11/main/: CMakeLists.txt  hello_world_main.c
ESP32-S2/s2_dht11_v2/: CMakeLists.txt  sdkconfig.old  test
ESP32-S2/s2_dht11_v2/main/: main.c
ESP32-S2/s2_json/: CMakeLists.txt
ESP32-S2/s2_lwip/: CMakeLists.txt  sdkconfig.old
ESP32-S2/s2_lwip/main/: tcp_client.c
ESP32-S2/s2_mqtt/: CMakeLists.txt  msg.json  sdkconfig  sdkconfig.old
ESP32-S2/s2_mqtt/app/app_ota/: CMakeLists.txt
ESP32-S2/s2_mqtt/main/: app_main.c  app_main.h
ESP32-S2/s2_mqtt_demo/: CMakeLists.txt  sdkconfig
ESP32-S2/s2_mqtt_demo/main/: app_main.c
ESP32-S2/s2_ota_v1/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32-S2/s2_ota_v1/app/app_mqtt/: CMakeLists.txt  (+2 more)
ESP32-S2/s2_ota_v1/main/: CMakeLists.txt  app_main.c
ESP32-S2/smart_config/main/: smartconfig_main.c
ESP32-S2/sum/: CMakeLists.txt  sdkconfig
ESP32-S2/sum/main/: tcp_client_multiple.c
ESP32-S2/sum1/: CMakeLists.txt  sdkconfig
ESP32-S2/sum1/main/: tcp_client.c
ESP32-S2/tcp_server/main/: tcp_server.c
ESP32-S3/s3_MQTT1/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32-S3/s3_components/: CMakeLists.txt
ESP32-S3/s3_mqtt/: CMakeLists.txt  sdkconfig  sdkconfig.old  test
ESP32-S3/s3_mqtt/main/: app_main.c  app_main.h
ESP32-S3/s3_smartconfig/: CMakeLists.txt
ESP32-S3/s3_wifi_scan/: CMakeLists.txt  sdkconfig
(+16 files in other folders)
